--- a/README.adoc
+++ b/README.adoc
@@ -5,3 +5,20 @@ a Typescript library for the https://planningcenter.com[planning center] https:/
 
 [WARNING]
 This library is a *work in progress* and is not yet ready for production use.
+
+== features
+
+* [x] browse folders and service types
+* [x] get items of a plan
+* [ ] get each item's
+** [x] planned length
+** [ ] recorded length
+** [ ] recorded start time
+* [ ] get the current timer if you want
+** [ ] full item length
+** [ ] end item on time
+* [ ] live control
+** [ ] take/release control
+** [ ] restart / jump to end of plan
+** [ ] next/previous item
+** [ ] jump to item by id
